# ollama_bot

./: .gitignore  Cargo.toml  run.sh  update.sh  update_and_run.sh
libs/models_manager/: Cargo.toml
libs/models_manager/src/: lib.rs
src/: main.rs  make.rs
src/at_start/: bot.rs  db.rs  mod.rs
src/at_start/db/: mod.rs
src/at_start/db/tables/: chat_messages.rs  chats_state.rs  mod.rs
src/at_start/tables/: chat_messages.rs  chats_state.rs  mod.rs
src/message/: mod.rs
