[package]
name = "ollama_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
sea-orm = { version = "1.1.8", default-features = false, features = [
  "macros",
  "sqlx-postgres",
  "runtime-tokio-rustls",
] }
teloxide = { version = "0.15.0", default-features = false, features = [
  "ctrlc_handler",
  "rustls",
] }
tokio = { version = "1.44.1", default-features = false, features = [
  "macros",
  "rt-multi-thread",
] }
